# SincPD

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
notebook/: sincnet_(an_explainable_method_based_on_sinc_filters_to_diagnose_parkinson’s_disease_severity_by_gait_cycle_ana.py
notebooks/: 00_quickstart.ipynb
scripts/: demo_quickstart.py  evaluate.sh  prepare_physionet_npz_flat.py  prune.sh  train_binary.sh
src/sincpd/: __init__.py  cli.py  data.py  evaluate.py  layers.py  models.py  preprocess.py  prune.py  train.py
src/sincpd/configs/: default.yaml  severity.yaml
src/sincpd/datasets/: __init__.py  physionet_flat.py
src/sincpd/eval/: metrics.py
src/sincpd/models/: sinc.py
src/sincpd/pruning/: kmeans_prune.py
src/sincpd/training/: optim.py  trainer.py
src/sincpd/utils/: io.py  plotting.py  seed.py
tests/: test_dataset.py  test_sinc_filter.py  test_trainer_smoke.py
